Call to asList() with only one argument